infra/argocd-interface/argocd-interface-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-interface
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-private
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.private.alfonsoramos.dev
      secretName: argocd-interface-tls
  rules:
    - host: argocd.private.alfonsoramos.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
